// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact method form domestic contact method should display email field when click Email 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form domestic contact method should display phone number field when click Call 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form domestic contact method should display phone number field when click Text 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form domestic contact method should render correct components 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form domestic contact method should render message when available 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
            <p
              class="day-of-travel-message"
            >
              Domestic message
            </p>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form international contact method when air booking when notifications enabled should render correctly 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class=""
            >
              <div
                class="notification-field"
              >
                <div
                  class="field"
                >
                  <div
                    class="contact-method-item flex-cross-center flex-row-reverse relative flex checkbox-button checkbox-button--row_checked flex-cross-center"
                    name="isNotificationsEnabled"
                  >
                    <div>
                      <span
                        class="checkbox-button--mark checkbox-button_checked"
                      >
                        <i
                          class="absolute xlarge bgtransp icon icon_check"
                        />
                      </span>
                    </div>
                    <div>
                      <div
                        class="checkbox-button--children flex-equal-width"
                      >
                        <p
                          class="pdkblue"
                        >
                          SHARED__PLACEHOLDER__ENABLE_NOTIFICATIONS
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <label
                  class="fields--label"
                >
                  SHARED__CONTACT_METHOD_FIELD_LABELS__CHOOSE_LANGUAGE
                </label>
                <div
                  class="field"
                >
                  <ul
                    class="contact-method-languages"
                  >
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        English
                      </span>
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark active"
                        />
                      </span>
                    </li>
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        Spanish
                      </span>
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="contact-method-communication"
            >
              <label
                class="fields--label"
              >
                SHARED__CONTACT_METHOD_FIELD_LABELS__CHOOSE_METHOD
              </label>
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                    <span
                      class="radio-button--mark"
                    >
                      <span
                        class="radio-input--mark active"
                      />
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                    <span
                      class="radio-button--mark"
                    >
                      <span
                        class="radio-input--mark"
                      />
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              >
                SHARED__CONTACT_METHOD_HELPER__TEXT
              </div>
            </div>
            <div
              class="contact-method-fields"
            >
              <label
                class="fields--label"
              >
                SHARED__CONTACT_METHOD_FIELD_LABELS__PHONE_NUMBER
              </label>
              <div
                class="field phone-number-field phone-number-field--international"
              >
                <div
                  class="labeled input large"
                >
                  <div
                    class="input--label mr4"
                  >
                    +1
                  </div>
                  <input
                    label="+1"
                    name="phoneNumber"
                    placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                    type="tel"
                    value="657-567-6759"
                  />
                </div>
              </div>
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="contact-method-item flex-row-reverse flex-cross-center relative flex checkbox-button flex-cross-center"
                  name="saveContactMethod"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width"
                    >
                      <p
                        class="gray5"
                      >
                        SHARED__CONTACT_METHOD__SAVE_CONTACT_METHOD
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form international contact method when air booking when rendered should display email form field when the email contact option is selected 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class=""
            >
              <div
                class="notification-field"
              >
                <div
                  class="field"
                >
                  <div
                    class="contact-method-item flex-cross-center flex-row-reverse relative flex checkbox-button checkbox-button--row_checked flex-cross-center"
                    name="isNotificationsEnabled"
                  >
                    <div>
                      <span
                        class="checkbox-button--mark checkbox-button_checked"
                      >
                        <i
                          class="absolute xlarge bgtransp icon icon_check"
                        />
                      </span>
                    </div>
                    <div>
                      <div
                        class="checkbox-button--children flex-equal-width"
                      >
                        <p
                          class="pdkblue"
                        >
                          SHARED__PLACEHOLDER__ENABLE_NOTIFICATIONS
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <label
                  class="fields--label"
                >
                  SHARED__CONTACT_METHOD_FIELD_LABELS__CHOOSE_LANGUAGE
                </label>
                <div
                  class="field"
                >
                  <ul
                    class="contact-method-languages"
                  >
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        English
                      </span>
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark active"
                        />
                      </span>
                    </li>
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        Spanish
                      </span>
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="contact-method-communication"
            >
              <label
                class="fields--label"
              >
                SHARED__CONTACT_METHOD_FIELD_LABELS__CHOOSE_METHOD
              </label>
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                    <span
                      class="radio-button--mark"
                    >
                      <span
                        class="radio-input--mark"
                      />
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                    <span
                      class="radio-button--mark"
                    >
                      <span
                        class="radio-input--mark active"
                      />
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              >
                SHARED__CONTACT_METHOD_HELPER__EMAIL
              </div>
            </div>
            <div
              class="contact-method-fields"
            >
              <label
                class="fields--label"
              >
                SHARED__CONTACT_METHOD_FIELD_LABELS__EMAIL
              </label>
              <div
                class="field"
              >
                <div
                  class="contact-email-field input"
                >
                  <input
                    class=""
                    name="email"
                    placeholder="Email address"
                    value="test@gmail.com"
                  />
                </div>
              </div>
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="contact-method-item flex-row-reverse flex-cross-center relative flex checkbox-button flex-cross-center"
                  name="saveContactMethod"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width"
                    >
                      <p
                        class="gray5"
                      >
                        SHARED__CONTACT_METHOD__SAVE_CONTACT_METHOD
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form international contact method when air booking when rendered should render correctly 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class=""
            >
              <div
                class="notification-field"
              >
                <div
                  class="field"
                >
                  <div
                    class="contact-method-item flex-cross-center flex-row-reverse relative flex checkbox-button checkbox-button--row_checked flex-cross-center"
                    name="isNotificationsEnabled"
                  >
                    <div>
                      <span
                        class="checkbox-button--mark checkbox-button_checked"
                      >
                        <i
                          class="absolute xlarge bgtransp icon icon_check"
                        />
                      </span>
                    </div>
                    <div>
                      <div
                        class="checkbox-button--children flex-equal-width"
                      >
                        <p
                          class="pdkblue"
                        >
                          SHARED__PLACEHOLDER__ENABLE_NOTIFICATIONS
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <label
                  class="fields--label"
                >
                  SHARED__CONTACT_METHOD_FIELD_LABELS__CHOOSE_LANGUAGE
                </label>
                <div
                  class="field"
                >
                  <ul
                    class="contact-method-languages"
                  >
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        English
                      </span>
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark active"
                        />
                      </span>
                    </li>
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        Spanish
                      </span>
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="contact-method-communication"
            >
              <label
                class="fields--label"
              >
                SHARED__CONTACT_METHOD_FIELD_LABELS__CHOOSE_METHOD
              </label>
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                    <span
                      class="radio-button--mark"
                    >
                      <span
                        class="radio-input--mark active"
                      />
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                    <span
                      class="radio-button--mark"
                    >
                      <span
                        class="radio-input--mark"
                      />
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              >
                SHARED__CONTACT_METHOD_HELPER__TEXT
              </div>
            </div>
            <div
              class="contact-method-fields"
            >
              <label
                class="fields--label"
              >
                SHARED__CONTACT_METHOD_FIELD_LABELS__PHONE_NUMBER
              </label>
              <div
                class="field phone-number-field phone-number-field--international"
              >
                <div
                  class="labeled input large"
                >
                  <div
                    class="input--label mr4"
                  >
                    +1
                  </div>
                  <input
                    label="+1"
                    name="phoneNumber"
                    placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                    type="tel"
                    value="657-567-6759"
                  />
                </div>
              </div>
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="contact-method-item flex-row-reverse flex-cross-center relative flex checkbox-button flex-cross-center"
                  name="saveContactMethod"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width"
                    >
                      <p
                        class="gray5"
                      >
                        SHARED__CONTACT_METHOD__SAVE_CONTACT_METHOD
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form international contact method when default props should render correct components 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="mt6"
            >
              <div
                class="notification-field"
              >
                <div
                  class="field"
                >
                  <div
                    class="form-radio-field contact-method--radio-button"
                  >
                    <div
                      class="form-radio-field--tips"
                    >
                      SHARED__PLACEHOLDER__NOTIFICATION_TOGGLE
                    </div>
                    <div
                      class="form-radio-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="field"
                >
                  <ul
                    class="contact-method-languages"
                  >
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        English
                      </span>
                      <i
                        class="icon icon_check"
                      />
                    </li>
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        Spanish
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="contact-method-communication"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="switch-radio-field"
                >
                  <div
                    class="save-credit-cards-field"
                  >
                    <div
                      class="save-credit-cards-field--label"
                    >
                      <span>
                        SHARED__CONTACT_METHOD__SAVE_CONTACT_METHOD
                      </span>
                    </div>
                    <div
                      class="save-credit-cards-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form international contact method when default props should render message when available 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="mt6"
            >
              <div
                class="notification-field"
              >
                <div
                  class="field"
                >
                  <div
                    class="form-radio-field contact-method--radio-button"
                  >
                    <div
                      class="form-radio-field--tips"
                    >
                      SHARED__PLACEHOLDER__NOTIFICATION_TOGGLE
                    </div>
                    <div
                      class="form-radio-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="pt3 pr5 gray5 medium int-message"
              >
                International message
              </p>
              <div>
                <div
                  class="field"
                >
                  <ul
                    class="contact-method-languages"
                  >
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        English
                      </span>
                      <i
                        class="icon icon_check"
                      />
                    </li>
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        Spanish
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="contact-method-communication"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form international contact method when not air booking declineNotifications is true should not display email field when click Email 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="mt6"
            >
              <div
                class="notification-field"
              >
                <div
                  class="field"
                >
                  <div
                    class="form-radio-field contact-method--radio-button"
                  >
                    <div
                      class="form-radio-field--tips"
                    >
                      SHARED__PLACEHOLDER__NOTIFICATION_TOGGLE
                    </div>
                    <div
                      class="form-radio-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="field"
                >
                  <ul
                    class="contact-method-languages"
                  >
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        English
                      </span>
                      <i
                        class="icon icon_check"
                      />
                    </li>
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        Spanish
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="contact-method-communication"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="switch-radio-field"
                >
                  <div
                    class="save-credit-cards-field"
                  >
                    <div
                      class="save-credit-cards-field--label"
                    >
                      <span>
                        SHARED__CONTACT_METHOD__SAVE_CONTACT_METHOD
                      </span>
                    </div>
                    <div
                      class="save-credit-cards-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form international contact method when not air booking declineNotifications is true should not display phone number field when click Text 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="mt6"
            >
              <div
                class="notification-field"
              >
                <div
                  class="field"
                >
                  <div
                    class="form-radio-field contact-method--radio-button"
                  >
                    <div
                      class="form-radio-field--tips"
                    >
                      SHARED__PLACEHOLDER__NOTIFICATION_TOGGLE
                    </div>
                    <div
                      class="form-radio-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="field"
                >
                  <ul
                    class="contact-method-languages"
                  >
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        English
                      </span>
                      <i
                        class="icon icon_check"
                      />
                    </li>
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        Spanish
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="contact-method-communication"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="switch-radio-field"
                >
                  <div
                    class="save-credit-cards-field"
                  >
                    <div
                      class="save-credit-cards-field--label"
                    >
                      <span>
                        SHARED__CONTACT_METHOD__SAVE_CONTACT_METHOD
                      </span>
                    </div>
                    <div
                      class="save-credit-cards-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form international contact method when not air booking declineNotifications is true should render correctly after radio button is clicked 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="mt6"
            >
              <div
                class="notification-field"
              >
                <div
                  class="field"
                >
                  <div
                    class="form-radio-field contact-method--radio-button"
                  >
                    <div
                      class="form-radio-field--tips"
                    >
                      SHARED__PLACEHOLDER__NOTIFICATION_TOGGLE
                    </div>
                    <div
                      class="form-radio-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="field"
                >
                  <ul
                    class="contact-method-languages"
                  >
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        English
                      </span>
                      <i
                        class="icon icon_check"
                      />
                    </li>
                    <li
                      class="contact-method-item"
                    >
                      <span>
                        Spanish
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="contact-method-communication"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="switch-radio-field"
                >
                  <div
                    class="save-credit-cards-field"
                  >
                    <div
                      class="save-credit-cards-field--label"
                    >
                      <span>
                        SHARED__CONTACT_METHOD__SAVE_CONTACT_METHOD
                      </span>
                    </div>
                    <div
                      class="save-credit-cards-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form save contact method label should render correctly 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="switch-radio-field"
                >
                  <div
                    class="save-credit-cards-field"
                  >
                    <div
                      class="save-credit-cards-field--label"
                    >
                      <span>
                        SHARED__CONTACT_METHOD__UPDATE_CONTACT_METHOD
                      </span>
                    </div>
                    <div
                      class="save-credit-cards-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form save contact method prefill behaviour should prefill save contact method field to false as default 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
            <div
              class="save-contact-method-field"
            >
              <div
                class="field"
              >
                <div
                  class="switch-radio-field"
                >
                  <div
                    class="save-credit-cards-field"
                  >
                    <div
                      class="save-credit-cards-field--label"
                    >
                      <span>
                        SHARED__CONTACT_METHOD__SAVE_CONTACT_METHOD
                      </span>
                    </div>
                    <div
                      class="save-credit-cards-field--radio"
                    >
                      <span
                        class="radio-button--mark"
                      >
                        <span
                          class="radio-input--mark"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form save contact method prefill behaviour should prefill save contact method field when user already entered this form 1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                    <i
                      class="icon icon_check"
                    />
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              >
                SHARED__CONTACT_METHOD_HELPER__TEXT
              </div>
            </div>
            <div
              class="contact-method-fields"
            >
              <div
                class="field phone-number-field phone-number-field--international"
              >
                <div
                  class="labeled input large"
                >
                  <div
                    class="input--label mr4"
                  >
                    +1
                  </div>
                  <input
                    label="+1"
                    name="phoneNumber"
                    placeholder="SHARED__PLACEHOLDER__PHONE_NUMBER"
                    type="tel"
                    value="111-111-1111"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`contact method form save contact method when user is not logged in should not show save contact method toggle  1`] = `
<div>
  <div>
    <form
      class="contact-method form"
      name="CONTACT_METHOD_FORM"
      novalidate=""
    >
      <fieldset>
        <div>
          <div>
            <div
              class="page-header action-bar"
              id=""
            >
              <ul
                class="action-bar-buttons action-bar--left-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="button"
                  >
                    SHARED__BUTTON_TEXT__CANCEL
                  </button>
                </li>
              </ul>
              <div
                class="action-bar--container"
              >
                <div
                  class="action-bar--title-align-center action-bar--title"
                >
                  <span
                    class="action-bar--main-title"
                  >
                    SHARED__CONTACT_METHOD__PAGE_HEADER_TITLE
                  </span>
                  <span
                    class="action-bar--sub-title"
                  />
                </div>
              </div>
              <ul
                class="action-bar-buttons action-bar--right-buttons"
              >
                <li
                  class="action-bar-buttons--item"
                >
                  <button
                    class="button"
                    type="submit"
                  >
                    SHARED__BUTTON_TEXT__DONE
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            class="contact-method--content"
          >
            <div
              class="contact-method-communication contact-method-fields--first-group"
            >
              <div
                class="field"
              >
                <ul
                  class="contact-method-options"
                >
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Text
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Call
                    </span>
                  </li>
                  <li
                    class="contact-method-item"
                  >
                    <span>
                      Email
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="helper-text"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;
